--- a/(简单|多方法)宝石与石头.md
+++ b/(简单|多方法)宝石与石头.md
@@ -75,7 +75,7 @@ class Solution {
 }
 ```
 
-Boolean法:9ms
+Boolean法:9ms、18ms
 
 (讨论区:https://leetcode.com/problems/jewels-and-stones/discuss/196273/Bit-Manipulation-Solution-Java-6-ms-Solution)
 
