--- a/(简单|不转字符串解决)回文数.md
+++ b/(简单|不转字符串解决)回文数.md
@@ -77,14 +77,21 @@ public class Solution {
         if(x < 0 || (x % 10 == 0 && x != 0)) {
             return false;
         }
+        //如果为偶数：
+        //如果是回文数，则x和revertedNumber会相同
+        //而如果中间数前面的位数和大于中间数后面的位数和，说明不是回文数
+        //while循环结束后得出的X比revertedNumber少1位也无妨
+        //所以可以这么写:while(x > revertedNumber){...}
+        //如果为奇数:
+        //得出的x也会比revertedNumber少1位
+        //因为处于中位的数字不影响回文（它总是与自己相等），所以我们可以简单地将其去除。
+        //可以通过revertedNumber/10去除处于中位的数字,即这个多出来的位
+        //例如，当输入为 12321 时，在 while 循环的末尾我们可以得到 x = 12，revertedNumber = 123，
         int revertedNumber = 0;
         while(x > revertedNumber) {
             revertedNumber = revertedNumber * 10 + x % 10;
             x /= 10;
         }
-        // 当数字长度为奇数时，我们可以通过 revertedNumber/10 去除处于中位的数字。
-        // 如,当输入为 12321 时,在while循环的末尾我们可以得到x=12,revertedNumber=123
-        // 由于处于中位的数字不影响回文（它总是与自己相等），所以我们可以简单地将其去除。
         return x == revertedNumber || x == revertedNumber/10;
     }
 }
