--- a/海盗分宝.md
+++ b/海盗分宝.md
@@ -7,7 +7,8 @@
 >问题：
 第几个海盗的存活概率最大？以及他要如何提出方案才能最大概率存活，并且尽量是自己获得多的金币呢？存活的那个人最多可以获得多少金币？
 
-###思路：
+思路：
+
 提出方案的人要想存活下去就必须让自己的方案被大多数人接受，也就是必须要争取某些票或者放弃一些票。
 那么方案提出者如何做出决策呢？应该争取哪些人的票？或是又该放弃哪些人的票呢？
 
@@ -21,7 +22,8 @@
 如果从前往后推测其他人可能的最大利益，会陷入死循环：第一个人做决定前得知道第2,3,4,5个人的决定，从前往后是无法推出任何答案的
 所以可以考虑尝试从后往前推测其余人可能的最大利益。在得知其余人的最大利益之后，就能得知自己的方案能够得到哪些人的支持，问题也就迎刃而解了。
 
-###解答：
+解答：
+
 从后往前推
 >假设1~3号提出方案后都没被接收，也就是1,2,3都喂了鲨鱼，只剩下4号和5号。
 这时4号知道5号一定会投反对票，让4号喂鲨鱼（这时5号只能获得自己的一票，没有超过人数的一半，但是需要大于半数，4号才不会死）
@@ -39,3 +41,5 @@
 1号会尝试去争取超过一半的票数，即1号在保证自己不会被喂鲨鱼的前提下尽量让自己得到更多的金币。
 1号可以有以下两种方案：97,0,1,2,0或97,0,1,0,2。(2号想让1号和3号死，所以1号根据2号的分配方案，需要得到3号和4、5其中一号的支持)
 1号的这种方案可以获得3票（超过一半的票数）：自己、三号和四号或者5号的支持。
+
+来源:菜鸟名企梦
