--- a/(简单*)二进制求和.md
+++ b/(简单*)二进制求和.md
@@ -28,6 +28,13 @@ class Solution {
         while (i <= aLen) {
             carry += (a.charAt(aLen-i) == '1') ? 1 : 0;
             carry += (i <= bLen && b.charAt(bLen-i) == '1') ? 1 : 0; 
+            
+            //当前位置(由carry得来)有可能为3、2、1、0(第一个不可能为3)
+            //若为3，则变为1；为2，则变为0；1、0就不变
+            //当前位置计算完毕后，需要计算carry
+            //carry有可能为3、2、1、0
+            //若为3、2，则变为1，即下一位add之后需要加1；1、0，则变为0
+            
             //如果carry为2，result[aLen-i]为0;如果carry为3，result[alen-i]为1
             result[aLen-i] = (char) ((carry & 1) + '0'); 
             carry = carry >> 1;//如果caryy为3、2，计算后为1；如果为1、0，计算后为0
