--- a/(简单*)二进制求和.md
+++ b/(简单*)二进制求和.md
@@ -37,7 +37,8 @@ class Solution {
             
             //如果carry为2，result[aLen-i]为0;如果carry为3，result[alen-i]为1
             result[aLen-i] = (char) ((carry & 1) + '0'); 
-            carry = carry >> 1;//如果caryy为3、2，计算后为1；如果为1、0，计算后为0
+            //如果caryy为3、2，计算后为1；如果为1、0，计算后为0
+            carry = carry >> 1;
             i++;
         }
         //结束循环后，如果carry为1，说明最前面要加一个1
