--- a/(简单|二叉树*)相同的树.md
+++ b/(简单|二叉树*)相同的树.md
@@ -29,7 +29,32 @@
         [1,2,1],   [1,1,2]
 
 输出: false
->Discuss
+>我的实现
+```java
+/**
+ * Definition for a binary tree node.
+ * public class TreeNode {
+ *     int val;
+ *     TreeNode left;
+ *     TreeNode right;
+ *     TreeNode(int x) { val = x; }
+ * }
+ */
+class Solution {
+    public boolean isSameTree(TreeNode p, TreeNode q) {
+        if(p == null && q == null) return true;//需要考虑都为null的情况，否则报空指针异常
+        if((p == null && q != null) || (p != null && q == null)) return false;
+        if(p.val != q.val) return false;
+        boolean left = isSameTree(p.left,q.left);
+        boolean right = isSameTree(p.right,q.right);
+        if(left == false || right == false){
+            return false;
+        }
+        return true;
+    }
+}
+```
+>Discuss，将我的代码精简化
 ```java
 /**
  * Definition for a binary tree node.
@@ -43,7 +68,7 @@
 
 class Solution {
     public boolean isSameTree(TreeNode p, TreeNode q) {
-        if(p == null && q == null) return true;//如果都为null，说明都到了末尾，返回true
+        if(p == null && q == null) return true;//如果都为null，说明左/右子树到了末尾且相同，返回true
         if(p == null || q == null) return false;//如果一个为null一个不为null，返回false
         //如果当前节点不为null，即还没到末尾，若值相同，且左右子树也相同，返回true
         return (p.val == q.val) && isSameTree(p.left,q.left) && isSameTree(p.right,q.right);
