--- a/(简单)颠倒二进制位.md
+++ b/(简单)颠倒二进制位.md
@@ -57,7 +57,7 @@
 00000000000001010010100000111101  7
 00000000000000000000000000011100
 ```
-
+>Discuss:
 ```java
 public class Solution {
     // you need treat n as an unsigned value
