--- a/(简单)打家劫舍.md
+++ b/(简单)打家劫舍.md
@@ -22,4 +22,46 @@
 
      偷窃到的最高金额 = 2 + 9 + 1 = 12 。
      
->推荐阅读：https://leetcode.com/problems/house-robber/discuss/156523/From-good-to-great.-How-to-approach-most-of-DP-problems.
+>递归版本:
+```java
+class Solution {
+    public int rob(int[] nums) {
+        return rob(nums, 0);
+    }
+    
+    public int rob(int[] nums, int i) {
+        if (i > nums.length - 1) {
+            return 0;
+        }
+        return Math.max(rob(nums, i + 2) + nums[i], rob(nums, i + 1));
+    }
+}
+```
+>Discuss:
+```java
+class Solution {
+    public int rob(int[] nums) {
+        if(nums.length == 0) {
+            return 0;
+        }
+        if(nums.length == 1){
+            return nums[0];
+        }
+        if(nums.length == 2) {
+            return Math.max(nums[0], nums[1]);    
+        }
+        
+        int c1 = nums[0];
+        int c2 = nums[1];
+        int maxRobbery= 0;
+        for(int i = 2; i<nums.length; i++) {
+            maxRobbery = Math.max(nums[i] + c1, c2);
+            c1 = Math.max(c1,c2);//因为可以选前第二个或第三个
+            c2 = maxRobbery;
+            
+        }
+        return c2;
+    }
+}
+```
+>推荐阅读:https://leetcode.com/problems/house-robber/discuss/156523/From-good-to-great.-How-to-approach-most-of-DP-problems.
