Update and rename (简单)翻转链表 to (简单|链表)翻转链表.md

--- a/(简单|链表)翻转链表.md
+++ b/(简单|链表)翻转链表.md
@@ -1,26 +1,17 @@
 翻转链表
+
 翻转一个链表
 
 样例
+
 给出一个链表1->2->3->null，这个翻转后的链表为3->2->1->null
 
 挑战
+
 在原地一次翻转完成
 
-思路：将第一个节点的next指为null，其后面的节点的next依次赋值为其上一个节点即可。
-
-/**
- * Definition for ListNode
- * public class ListNode {
- *     int val;
- *     ListNode next;
- *     ListNode(int x) {
- *         val = x;
- *         next = null;
- *     }
- * }
- */
-java:(AC成功),不太简洁，可参考思路,下面有简洁的。(思路一致)
+>思路：将第一个节点的next指为null，其后面的节点的next依次赋值为其上一个节点即可。
+```java
 public class Solution {
     /**
      * @param head: n
@@ -60,7 +51,9 @@ public class Solution {
         return nextLast;
     }
 }
-来源：九章算法
+```
+>来源：九章算法
+```java
 public class Solution {
     /**
      * @param head: The head of linked list.
@@ -77,3 +70,4 @@ public class Solution {
         return prev;
     }
 }
+```
