--- a/(简单)两个数组的交集.md
+++ b/(简单)两个数组的交集.md
@@ -17,7 +17,7 @@
 输出结果中的每个元素一定是唯一的。
 
 我们可以不考虑输出结果的顺序。
->使用两个hashset，去重两次
+>使用两个hashset，去重两次，如果只用一个set，会导致nums1中存在而nums2中不存在的数也存到res中去
 ```java
 public class Solution {
     public int[] intersection(int[] nums1, int[] nums2) {
