--- a/(简单|字符串)字符串中的单词数.md
+++ b/(简单|字符串)字符串中的单词数.md
@@ -26,7 +26,7 @@ class Solution {
     }
 }
 ```
->官方：
+>官方1：
 ```java
 class Solution {
     public int countSegments(String s) {
@@ -35,6 +35,20 @@ class Solution {
             return 0;
         }
         return trimmed.split("\\s+").length;
+    }
+}
+```
+>官方2:
+```java
+class Solution {
+    public int countSegments(String s) {
+        int segmentCount = 0;
+        for (int i = 0; i < s.length(); i++) {
+            if ((i == 0 || s.charAt(i-1) == ' ') && s.charAt(i) != ' ') {//如果i不为0，则每次判断当前值和前一个值;i为0的时候就补上1，所以segmentCount不用为1
+                segmentCount++;
+            }
+        }
+        return segmentCount;
     }
 }
 ```
