--- a/(简单|字符串)字符串中的单词数.md
+++ b/(简单|字符串)字符串中的单词数.md
@@ -13,7 +13,7 @@ class Solution {
         char[] arr = s.toCharArray();
         int res = 0;
         for(int i = 0;i < arr.length;i++){
-            int temp = i;
+            int temp = i;//使用temp，保证有单词时res才+1，否则如"     ",结果会为5，不是正确答案(0)
             while(temp < arr.length && arr[temp] != ' '){
                 temp++;
             }
