--- a/(简单?*)路径总和|||.md
+++ b/(简单?*)路径总和|||.md
@@ -6,7 +6,7 @@
 
 二叉树不超过1000个节点，且节点数值范围是 [-1000000,1000000] 的整数。
 
->我的思路：遍历所有节点，对每个节点都进行计算
+>思路：遍历所有节点，对每个节点都进行计算
 >参考答案
 >https://leetcode.com/problems/path-sum-iii/discuss/91878/17-ms-O(n)-java-Prefix-sum-method
->https://www.cnblogs.com/eilearn/p/9394203.html
+>这个代码比较好理解：https://www.cnblogs.com/eilearn/p/9394203.html
