Update and rename (简单)使数组元素相等的最小改变次数.md to (简单|*)使数组元素相等的最小改变次数.md

--- a/(简单|*)使数组元素相等的最小改变次数.md
+++ b/(简单|*)使数组元素相等的最小改变次数.md
@@ -78,6 +78,9 @@ class Solution {
 ```
 >https://leetcode.com/problems/minimum-moves-to-equal-array-elements/discuss/240093/Math-question%2BJava-
 >最小移动次数=数组总和-最小值×数组长度
+>逆向思考，每次移动让剩余的n-1个数加1，等于让指定数减1直到都相同
+>而原先总的和设为num，要让所有数都等于最小值，那么答案数组的和就为min * nums.length,所以变化的值就为sum - min * nums.length
+>每次改变都是指定数减1，所以变化的值就是改变的次数
 ```java
 class Solution {
     public int minMoves(int[] nums) {
