某厂面试算法题

--- a/最大在线人数及其区间.md
+++ b/最大在线人数及其区间.md
@@ -6,8 +6,10 @@
 
 - 思路
 
-用一个86400大小的数组，一个元素代表一秒(可以优化为一个位代表一秒)。
+用一个86400大小的数组，一个元素代表一秒(可以优化为一个位代表一秒，即bitmap)。
 
 遍历所有用户，每个用户的登录时间为起始，注销时间为末尾，使数组对应区间的值+1
 
 这样数组的最大值就是最大在线人数，此最大值区间就是最长在线时长。
+
+bitmap实现：https://blog.csdn.net/xia744510124/article/details/51509285/
