Character.toUpperCase(character)

--- a/(入门)大小写转换.md
+++ b/(入门)大小写转换.md
@@ -1,11 +1,17 @@
 描述
+
 将一个字符由小写字母转换为大写字母
+
 你可以假设输入一定在小写字母 a ~ z 之间
+
 样例
+
 a -> A
+
 b -> B
 
 JAVA
+```java
 public class Solution {
     /**
      * @param character: a character
@@ -40,6 +46,7 @@ public class demo3 {
         System.out.println(s1);
     }  
 }
-
+```
 toUpperCase和toLowerCase方法必须是用String类型的对象加载
+
 而c[i]为字符型，所以在c[i]后加上一个空字符串，从而使c[]自动转换成字符串
