--- a/冒泡排序.md
+++ b/冒泡排序.md
@@ -6,20 +6,23 @@
 >0~N-2:同上
 ```java
 public static void bubbleSort(int[] arr){
-	for(int end = arr.length - 1;end > 0;end--)
-		//每一次都将剩下元素的最大元素放到最右边
-		for(int i = 0;i < end;i++)
-			if(arr[i] > arr[i+1])
-				swap(arr,i,i+1);
+    if(arr == null || arr.length < 2){
+    	return ;
+    }
+    for(int end = arr.length - 1;end > 0;end--)
+    //每一次都将剩下元素的最大元素放到最右边
+	for(int i = 0;i < end;i++)
+		if(arr[i] > arr[i+1])
+			swap(arr,i,i+1);
 }
 
 //交换
 public static void swap(int[] arr, int i, int j) {
-	arr[i] = arr[i] ^ arr[j];
-	arr[j] = arr[i] ^ arr[j];
-	arr[i] = arr[i] ^ arr[j];
-	/*int temp = arr[i];
-	arr[i] = arr[j];
-	arr[j] = temp;*/
+    arr[i] = arr[i] ^ arr[j];
+    arr[j] = arr[i] ^ arr[j];
+    arr[i] = arr[i] ^ arr[j];
+    /*int temp = arr[i];
+    arr[i] = arr[j];
+    arr[j] = temp;*/
 }
 ```
