0 ~ N-1找一个最小的放在0位置上，1~N-1上找一个最小的放在1位置上。。。

--- a/选择排序.md
+++ b/选择排序.md
@@ -3,11 +3,15 @@
 >0 ~ N-1找一个最小的放在0位置上，1~N-1上找一个最小的放在1位置上...(刚好与索引对应)
 ```java
 public void selectSort(int[] arr){
-	for(int i = 0;i < arr.length - 1;i++){
-		int minIndex = i;//最小数的索引
-		for(int j = i + 1;j < arr.length;j++)
-			minIndex = arr[j] < arr[minIndex] ? j : minIndex;
-		swap(arr,i,minIndex);
+    if(arr == null || arr.length < 2){
+        return ;
+    }
+    for(int i = 0;i < arr.length - 1;i++){
+	int minIndex = i;//最小数的索引
+	for(int j = i + 1;j < arr.length;j++){
+	    minIndex = arr[j] < arr[minIndex] ? j : minIndex;
 	}
+	swap(arr,i,minIndex);
+    }
 }
 ```
