扑克牌排序

--- a/插入排序.md
+++ b/插入排序.md
@@ -8,8 +8,12 @@
 
 ```java
 public void insertSort(int[] arr){
-	for(int i = 1;i < arr .length;i++)//0位置是最前面的，不用进入循环
-		for(int j = i - 1;j >= 0 && arr[j] > arr[j + 1];j--)
-			swap(arr,j,j+1);
+    if(arr == null || arr.length < 2){
+        return ;
+    }
+    for(int i = 1;i < arr.length;i++)//0位置是最前面的，不用进入循环
+	for(int j = i - 1;j >= 0 && arr[j] > arr[j + 1];j--){
+	    swap(arr,j,j+1);
+	}
 }
 ```
