运用荷兰国旗，递归+非递归

--- a/快速排序.md
+++ b/快速排序.md
@@ -63,3 +63,25 @@ public static int[] partition(int[] arr, int l, int r) {
     return new int[] { less + 1, more - 1};
 }
 ```
+>非递归实现
+```java
+public static void quickSortIteration(int[] arr,int left,int right){
+    Deque<Integer> stack = new ArrayDeque<>();
+    //先将初始状态的左右指针压栈（先右后左）
+    stack.push(right);
+    stack.push(left);
+    int tempL,tempR;
+    while(!stack.isEmpty()){
+	tempL = stack.pop();//先弹出左
+	tempR = stack.pop();//后弹出右
+	if(tempL < tempR){
+	    swap(arr, tempL + (int) (Math.random() * (tempR - tempL + 1)), tempR);
+	    int[] p = partition(arr, tempL, tempR);
+	    stack.push(p[0] - 1);
+	    stack.push(tempL);
+	    stack.push(tempR);
+	    stack.push(p[1] + 1);
+	}
+    }
+}
+```
