使用桶思想，以空间换时间

--- a/相邻最大差值.md
+++ b/相邻最大差值.md
@@ -36,11 +36,11 @@ public class MaxGap {
             hasNum[bid] = true;
         }
         int res = 0;
-        int lastMax = maxs[0];//用一个变量来记录前一个非空桶
+        int preMax = maxs[0];//用一个变量来记录前一个非空桶
         for(int i = 1;i <= nums.length;i++){//从1号桶开始
             if(hasNum[i]){
-                res = Math.max(res, mins[i] - lastMax);
-                lastMax = maxs[i];
+                res = Math.max(res, mins[i] - preMax);
+                preMax = maxs[i];
             }
         }
         return res;
