--- a/流的中位数.md
+++ b/流的中位数.md
@@ -6,7 +6,11 @@
 
 用堆:
 
-准备两个数组A、B，吐出第一个数，进A，作为大根堆的根，吐出第，二个数，如果比大根堆的根小，就进入A；如果比大根堆的根大，就进B(B就作为小根堆了)，重复这个过程
+准备两个数组A、B，吐出第一个数，进A，作为大根堆的根，吐出第二个数，如果比大根堆的根小，就进入A；
+
+如果比大根堆的根大，且比小根堆的根大，就进B(B就作为小根堆了)，否则进A（后续调整）
+
+重复这个过程
 
 尽量形成两个都是N/2的数组，较大的数都在B，较小的数都在A:
 
@@ -18,3 +22,84 @@
 
 每一次只要O(logN)
 
+```java
+public class MadianQuick {
+
+    public static class MedianHolder {
+    
+        private PriorityQueue<Integer> maxHeap = new PriorityQueue<>(new MaxHeapComparator());
+        private PriorityQueue<Integer> minHeap = new PriorityQueue<>(new MinHeapComparator());
+        
+        //个数相差2时就要调整
+        private void modifyTwoHeapsSize() {
+            if (this.maxHeap.size() == this.minHeap.size() + 2) {
+                this.minHeap.add(this.maxHeap.poll());
+            }
+            if (this.minHeap.size() == this.maxHeap.size() + 2) {
+                this.maxHeap.add(this.minHeap.poll());
+            }
+        }
+
+        public void addNumber(int num) {
+            if (this.maxHeap.isEmpty()) {
+                this.maxHeap.add(num);
+                return;
+            }
+            if (this.maxHeap.peek() >= num) {
+                this.maxHeap.add(num);
+            } else {
+                if (this.minHeap.isEmpty()) {
+                    this.minHeap.add(num);
+                    return;
+                }		
+                if (this.minHeap.peek() > num) {
+                    this.maxHeap.add(num);
+                } else {
+                    this.minHeap.add(num);
+                }
+            }
+            modifyTwoHeapsSize();
+        }
+
+        public Integer getMedian() {
+            int maxHeapSize = this.maxHeap.size();
+            int minHeapSize = this.minHeap.size();
+            if (maxHeapSize + minHeapSize == 0) {
+                return null;
+            }
+            Integer maxHeapHead = this.maxHeap.peek();
+            Integer minHeapHead = this.minHeap.peek();
+            //偶数个的情况
+            if (((maxHeapSize + minHeapSize) & 1) == 0) {
+                return (maxHeapHead + minHeapHead) / 2;
+            }
+            //奇数个的情况，哪个堆多一个就用哪个堆的堆顶
+            return maxHeapSize > minHeapSize ? maxHeapHead : minHeapHead;
+        }
+
+    }
+
+    public static class MaxHeapComparator implements Comparator<Integer> {
+        @Override
+        public int compare(Integer o1, Integer o2) {
+            if (o2 > o1) {
+                return 1;
+            } else {
+                return -1;
+            }
+        }
+    }
+
+    public static class MinHeapComparator implements Comparator<Integer> {
+        @Override
+        public int compare(Integer o1, Integer o2) {
+            if (o2 < o1) {
+                return 1;
+            } else {
+                return -1;
+            }
+        }
+    }
+}
+```
+https://blog.csdn.net/as1072966956/article/details/82992977
