层次遍历的运用

--- a/判断完全二叉树.md
+++ b/判断完全二叉树.md
@@ -1,3 +1,13 @@
+使用按层遍历
+
+1.如果任何一个节点有右孩子却没有左孩子，返回false；
+
+2.如果一个节点，不是左右两个孩子都全，即有左没右或都没有，后面出现的节点都必须是叶节点，不然false
+
+3.如果1、2都没中，就遍历下一个节点
+
+用一个status，一开始没被开启，为false，到了2，为true，被开启，代表后面遇到的节点都必须是叶节点
+
 ```java
 public class IsCBT {
     public static class Node {
