--- a/随机池.md
+++ b/随机池.md
@@ -21,7 +21,9 @@ public class RandomPool {
                 this.indexKeyMap.put(this.size++, key);
             }
         }
-
+        
+        //要保持index不变而更改key，所以使用indexKeyMap的最后一个(其他的kv对也可以)的key作为新key
+        //这样就只是kv对少了一个而已，getRandom还是等概率
         public void delete(K key) {
             if (this.keyIndexMap.containsKey(key)) {
                 int deleteIndex = this.keyIndexMap.get(key);
