堆应用、贪心

--- a/金条切割.md
+++ b/金条切割.md
@@ -12,7 +12,10 @@
 
 - 解析
 
-类似哈夫曼编码，使用数组构建小根堆
+类似哈夫曼编码
+![1545309215989](https://github.com/cyxpdc/Algorithm/blob/master/1545309215989.png)
+
+使用数组构建小根堆
 
 【每一次从堆里拿两个数出来（即两个最小的，拿出来后，在堆里面需要删掉，类似栈的pop操作），计算两个数的合sum（即代价）后，将sum插入堆里】
 
