--- a/(简单)反转整数.md
+++ b/(简单)反转整数.md
@@ -1,25 +1,37 @@
 给定一个 32 位有符号整数，将整数中的数字进行反转。
 
 示例 1:
+
 输入: 123
+
 输出: 321
 
 示例 2:
+
 输入: -123
+
 输出: -321
 
 示例 3:
+
 输入: 120
+
 输出: 21
 
 注意:
+
 假设我们的环境只能存储 32 位有符号整数，其数值范围是 [−231,  231 − 1]。根据这个假设，如果反转后的整数溢出，则返回 0。
 
 思路：反转题的思路都类似如下三行代码:
+
 int temp = num % 10;
+
 result = result * 10 + temp;
+
 num /= 10;
+
 此题也是，注意加上边界判断即可
+```java
 class Solution {
     public int reverse(int x) {
         int result = 0;
@@ -40,3 +52,4 @@ class Solution {
         return result;
     }
 }
+```
