--- a/字符串的子串.md
+++ b/字符串的子串.md
@@ -1,4 +1,6 @@
 流程：遇到不相等的字符时，就从最长前缀的下一个字符开始和i1当前字符继续匹配
+
+如图：得到信息数组
 ![1545441085665](https://github.com/cyxpdc/Algorithm/blob/master/image.png)
 ```java
 public class KMP {
