--- a/字符串的子串.md
+++ b/字符串的子串.md
@@ -1,6 +1,8 @@
 流程：遇到不相等的字符时，就从最长前缀的下一个字符开始和i1当前字符继续匹配
 
-如图：得到信息数组
+如图：得到信息数组。如果前缀的下一个不等于当前字符的上一个的话，就进行如图流程，等于的话就直接+1即可，不可能加2或更多，否则
+
+会推翻“i-1位置的元素的最长前缀后缀为x”这个结论
 ![1545441085665](https://github.com/cyxpdc/Algorithm/blob/master/image.png)
 ```java
 public class KMP {
