--- a/窗口最大值.md
+++ b/窗口最大值.md
@@ -1,6 +1,5 @@
-问题
+- 问题
  
-
 有一个整型数组arr和一个大小为w的窗口从数组的最左边滑到最右边，窗口每次向右边滑一个位置。
 
 例如，数组为[4,3,1,5,4,3,7,5]，窗口大小为5时:
@@ -15,4 +14,46 @@
 
 返回result = {5, 5,7,7}
 
-https://blog.csdn.net/h_666666/article/details/86512484
+- 解析https://yq.aliyun.com/articles/669605
+
+利用单调队列。从头到尾遍历数组时，根据如下的规则出队入队：
+
+1）如果队列为空，则当前队列入队。
+
+2）如果当前数字大于等于队列尾，则删除队列尾，直到当前数字小于队列尾部。
+
+3）如果当前数字小于队列尾，则当前数字入队列
+
+4）如果队列头超出滑动窗口范围，则删除队列头。
+```java
+public class Main {
+
+    public ArrayList<Integer> slideWindow(int[] array, int w){
+        if(array == null || w < 1 || array.length < w)
+            return null;
+        ArrayList<Integer> result = new ArrayList<>();
+        LinkedList<Integer> queue = new LinkedList<>();//只保存数组的下标，便于判断比较与滑动窗口的大小
+        for(int i = 0; i < array.length; i++){
+            while (!queue.isEmpty() && array[i] >= array[queue.peekLast()]){
+                queue.pollLast();
+            }
+            queue.addLast(i);
+            //队列头超过滑动窗口的范围
+            if(i - w == queue.peekFirst())
+                queue.pollLast();
+            if(i >= w - 1)
+                result.add(array[queue.peekFirst()]);
+        }
+        return result;
+    }
+
+    public static void main(String[] args) {
+        int[] array = new int[]{3, 3, 2, 2};
+        int w = 3;
+        ArrayList<Integer> res = new Main().slideWindow(array, w);
+        for (Integer e:res) {
+            System.out.println(e);
+        }
+    }
+}
+```
