--- a/窗口最大值.md
+++ b/窗口最大值.md
@@ -40,7 +40,7 @@ public class Main {
             queue.addLast(i);
             //队列头超过滑动窗口的范围
             if(i - w == queue.peekFirst())
-                queue.pollLast();
+                queue.pollFirst();
             if(i >= w - 1)
                 result.add(array[queue.peekFirst()]);
         }
