--- a/异或和为0的最大子数组.md
+++ b/异或和为0的最大子数组.md
@@ -4,6 +4,13 @@
 
 - 解析
 
+先看两个性质
+
+>1. 异或运算满足交换律和结合律，即切分后的子数组元素顺序跟结果无关
+
+>2. 0和N异或为N，N和N异或为0
+
+
 假设存在最优解，i为最后一个部分的最后一个位置，则有两种可能性：i所在的子数组异或和为0和不为0
 
 先看第二种可能：i所在的子数组异或和不为0
@@ -23,22 +30,22 @@ public class Most_EOR {
     public static int mostEOR(int[] arr) {
         int ans = 0;
         int xor = 0;
-        int[] mosts = new int[arr.length];
-        HashMap<Integer, Integer> map = new HashMap<>();//异或和：当前位置
+        int[] dp = new int[arr.length];//以每个位置结尾的最大异或和数组个数
+        Map<Integer, Integer> map = new HashMap<>();//kv为异或和：当前位置
         map.put(0, -1);
         for (int i = 0; i < arr.length; i++) {
             xor ^= arr[i];
             if (map.containsKey(xor)) {
                 int pre = map.get(xor);
-                mosts[i] = pre == -1 ? 1 : (mosts[pre] + 1);
+                dp[i] = pre == -1 ? 1 : (dp[pre] + 1);
             }
             if (i > 0) {
-                mosts[i] = Math.max(mosts[i - 1], mosts[i]);
+                dp[i] = Math.max(dp[i - 1], dp[i]);
             }
             map.put(xor, i);
-            ans = Math.max(ans, mosts[i]);
+            ans = Math.max(ans, dp[i]);
         }
-	    return ans;
+	return ans;
     }
 }
 ```
