--- a/计算公式.md
+++ b/计算公式.md
@@ -20,7 +20,7 @@
 
 
 ```java
-public class Code_07_ExpressionCompute {
+public class ExpressionCompute {
     //函数入口
     public static int getValue(String str) {
         //从0位置开始算，输出计算结果
